src/objects/peer__Licenses__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Licenses</description>
    <fields>
        <fullName>peer__Market_Place_License__c</fullName>
        <label>Market Place License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Notify_License__c</fullName>
        <label>Notify License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Licenses</label>
</CustomObject>